feat: refactor carddav, prepare caldav